--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-    <!-- your code here! See README.md for deliverables -->
-
+   
+    <video controls autoplay width="600" height="400">
+      <source src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/mountain.mp4" type="video/mp4">
+      <source src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/mountain.webm" type="video/ogg">
+    </video>
   </body>
 </html>
